[package]
name = "mp3todfpwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.5"
tokio-tungstenite = "0.21.0"
env_logger = "0.11.2"
log = "0.4.20"
futures-util = "0.3.30"
